# cat-detector

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE.md  README.md  package-lock.json  pyproject.toml  serverless-compose.yml
services/image-processing-service/: serverless.yml
services/image-processing-service/src/: handler.py
services/upload-service/: serverless.yml
services/upload-service/src/: handler.py
upload-service/: handler.py
